--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "the only type safe way to pad a string on the left-handed side of the string",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "repository": {
     "type": "git",
