--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,6 @@ cache:
 env:
   global:
   - CXX=g++-4.8
-  - alias jasmine=./node_modules/.bin/jasmine
-  - alias tsc=./node_modules/.bin/tsc
 
 before_install:
   - npm install -g npm@3
@@ -27,4 +25,4 @@ install:
   - npm install && npm run lint
 
 script:
-  - npm run build_spec
+  - npm test
